# stratum

.github/workflows/: test.yaml
protocols/: Cargo.toml
protocols/v2/codec-sv2/: Cargo.toml
protocols/v2/framing-sv2/: Cargo.toml  README.md
protocols/v2/roles-logic-sv2/: Cargo.toml
roles/: Cargo.toml
roles/jd-client/: Cargo.toml
roles/jd-client/src/: main.rs
roles/jd-server/: Cargo.toml
roles/jd-server/config-examples/: jds-config-local-example.toml
roles/jd-server/src/: main.rs
roles/pool/: Cargo.toml
roles/pool/src/: main.rs
roles/roles-utils/network-helpers/: Cargo.toml
roles/template-provider-role/: Cargo.toml  build.rs
roles/template-provider-role/capnp/: common.capnp  echo.capnp  init.capnp  mining.capnp
roles/template-provider-role/src/: error.rs  lib.rs  main.rs  message_utils.rs  setup_connection.rs
roles/template-provider-role/src/provider/: mod.rs  setup_connection.rs  state.rs
roles/template-provider-role/src/rpc_client/: error.rs  mod.rs
roles/tests-integration/: Cargo.toml
roles/tests-integration/lib/: mod.rs
roles/tests-integration/tests/: integration_e2e.rs  jd_integration.rs  jdc_integration.rs  pool_integration.rs  sniffer_integration.rs  translator_integration.rs
roles/translator/: Cargo.toml
roles/translator/src/: main.rs
sv2/codec-sv2/: BENCHES.md  Cargo.toml
sv2/codec-sv2/benches/: common.rs  decoder.rs
sv2/codec-sv2/src/: encoder.rs
sv2/framing-sv2/src/: framing.rs
utils/: Cargo.toml
utils/buffer/: Cargo.toml
utils/builder-macros/: Cargo.toml
utils/builder-macros/src/: lib.rs
(+65 files in other folders)
