[package]
name = "template-provider-role"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[lib]
name = "template_provider_sv2"
path = "src/lib.rs"

[dependencies]
clap = { version = "4.5.37", features = ["derive"] }
binary_sv2 = { path = "../../protocols/v2/binary-sv2" }
buffer_sv2 = { path = "../../utils/buffer" }
codec_sv2 = { path = "../../protocols/v2/codec-sv2", features = ["noise_sv2"] }
network_helpers_sv2 = { path = "../roles-utils/network-helpers" }
noise_sv2 = { path = "../../protocols/v2/noise-sv2" }
roles_logic_sv2 = { path = "../../protocols/v2/roles-logic-sv2" }
async-channel = "1.5.1"
tracing = "0.1.41"
stratum-common = { version = "2.0.0", path = "../../common", features = ["constants"] }
tracing-subscriber = "0.3.19"
tokio = { version = "1.44.2", features = ["full"] }
key-utils = { path = "../../utils/key-utils" }
capnp = "0.20.0"
capnp-rpc = "0.20.0"
tokio-util = { version = "0.7.15", features = ["compat"] }
futures = "0.3.31"

[build-dependencies]
capnpc = "0.20.0"
regex = "1.11.1"

